# vcftools

./: .gitignore  Makefile  Makefile.am  README.md  README.txt  adam.html  autogen.sh  configure.ac  index.html  params.json
build-aux/: git-version-gen
cpp/: Makefile  Makefile~  bcf_entry.cpp  bcf_entry.h  bcf_entry_setters.cpp  bcf_file.cpp  bcf_file.h  dgeev.cpp  dgeev.h  entry.cpp  entry.h  entry_filters.cpp  entry_getters.cpp  entry_setters.cpp  gamma.cpp  header.cpp  header.h  output_log.cpp  output_log.h  parameters.cpp  parameters.h  variant_file.cpp  variant_file_diff.cpp  variant_file_filters.cpp  variant_file_format_convert.cpp  variant_file_output.cpp  vcf_entry.cpp  vcf_entry.h  vcf_entry_setters.cpp  vcf_file.cpp  vcf_file.h  vcftools.1  vcftools.h
examples/: annotate-test.vcf  annotate.out  annotate.txt  annotate2.out  annotate3.out  cmp-test-a-3.3.vcf  cmp-test-a.vcf  cmp-test-b-3.3.vcf  cmp-test-b.vcf  cmp-test.out  concat-a.vcf  concat-b.vcf  concat-c.vcf  concat.out  consensus.fa  consensus.out  consensus.out2  consensus.vcf  contrast.out  contrast.vcf  fill-an-ac.out  filters.txt  fix-ploidy.out  fix-ploidy.samples  fix-ploidy.txt  fix-ploidy.vcf  floats.vcf  indel-stats.out  indel-stats.tab  indel-stats.vcf  invalid-4.0.vcf  isec-n2-test.vcf.out  merge-test-a.vcf  merge-test-b.vcf  merge-test-c.vcf  merge-test.vcf.out  parse-test.vcf  perl-api-1.pl  query-test.out  shuffle-test.vcf  (+7 more)
perl/: ChangeLog  Makefile  fill-aa  fill-ref-md5  vcf-annotate  vcf-concat  vcf-consensus  vcf-contrast  vcf-convert  vcf-indel-stats  vcf-merge  vcf-phased-join  vcf-subset  vcf-validator
src/: Makefile.am
src/cpp/: Makefile  Makefile.am  bcf_entry.cpp  bcf_entry_setters.cpp  bcf_file.cpp  dgeev.cpp  dgeev.h  entry.cpp  entry.h  entry_filters.cpp  entry_getters.cpp  gamma.h  header.cpp  parameters.cpp  parameters.h  variant_file.h  variant_file_format_convert.cpp  variant_file_output.cpp  vcf_entry.cpp  vcf_file.cpp  vcftools.1  vcftools.cpp
src/perl/: FaSlice.pm  Makefile  Makefile.am  Vcf.pm  VcfStats.pm  fill-an-ac  fill-fs  tab-to-vcf  test.t  vcf-compare  vcf-convert  vcf-fix-newlines  vcf-fix-ploidy  vcf-haplotypes  vcf-isec  vcf-merge  vcf-query  vcf-shuffle-cols  vcf-sort  vcf-stats  vcf-to-tab  vcf-tstv
website/: Makefile  README  style.css
website/src/: documentation.inc  downloads.inc  examples.inc  htslib.inc  index.inc  index.php  license.inc  links.inc  man_0112a.inc  man_0112b.inc  man_latest.inc  man_latest_new.inc~  perl_examples.inc  perl_module.inc  specs.inc
