dist_bin_SCRIPTS = \
	fill-aa \
	fill-an-ac \
	fill-fs \
	fill-ref-md5 \
	vcf-annotate \
	vcf-compare \
	vcf-concat \
	vcf-consensus \
	vcf-contrast \
	vcf-convert \
	vcf-fix-newlines \
	vcf-fix-ploidy \
	vcf-indel-stats \
	vcf-isec \
	vcf-merge \
	vcf-phased-join \
	vcf-query \
	vcf-shuffle-cols \
	vcf-sort \
	vcf-stats \
	vcf-subset \
	vcf-to-tab \
	vcf-tstv \
	vcf-validator

pmdir = $(exec_prefix)/$(PMDIR)

dist_pm_DATA = \
	FaSlice.pm \
	Vcf.pm \
	VcfStats.pm
